--- a/HO_Pandas.ipynb
+++ b/HO_Pandas.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Introduction to Pandas\n",
     "\n",
-    "Inspired to the tutorial available [here](#https://pandas.pydata.org/pandas-docs/stable/tutorials.html).\n",
+    "Inspired to the tutorial available [here](https://pandas.pydata.org/pandas-docs/stable/tutorials.html).\n",
     "To use Pandas, it must be imported as:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
    "source": [
     "## Populating a DataFrme\n",
     "\n",
-    "There are sveral possibilities to create a **DataFrame**, but we focus on the two simplest ones.\n",
+    "There are sveral possibilities to create a [**DataFrame**](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.html), but we focus on the two simplest ones.\n",
     "\n",
     "### From a dictionary\n",
     "\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4   25     181      Joe"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,12 +138,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading a CSV"
+    "### Reading a CSV\n",
+    "\n",
+    "Using [*read_csv()*](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.read_csv.html#pandas.read_csv) function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +230,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,13 +256,13 @@
    "source": [
     "### Looking into a DataFrame\n",
     "\n",
-    "Beside **head()**, there are several useful function to see the content of a DataFrame.\n",
-    "Some of the must useful are illustrated below."
+    "Beside [**head()**](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.head.html#pandas.DataFrame.head), there are several useful function to see the content of a DataFrame.\n",
+    "Some of the must useful are illustrated below ([describe()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.describe.html#pandas.DataFrame.describe),[info()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.info.html#pandas.DataFrame.info), [tail()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.tail.html)):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +365,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +433,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -502,21 +504,21 @@
        "</div>"
       ],
       "text/plain": [
-       "        sepal_length  sepal_width  petal_length  petal_width    species\n",
-       "count     150.000000   150.000000    150.000000   150.000000        150\n",
-       "unique           NaN          NaN           NaN          NaN          3\n",
-       "top              NaN          NaN           NaN          NaN  virginica\n",
-       "freq             NaN          NaN           NaN          NaN         50\n",
-       "mean        5.843333     3.054000      3.758667     1.198667        NaN\n",
-       "std         0.828066     0.433594      1.764420     0.763161        NaN\n",
-       "min         4.300000     2.000000      1.000000     0.100000        NaN\n",
-       "25%         5.100000     2.800000      1.600000     0.300000        NaN\n",
-       "50%         5.800000     3.000000      4.350000     1.300000        NaN\n",
-       "75%         6.400000     3.300000      5.100000     1.800000        NaN\n",
-       "max         7.900000     4.400000      6.900000     2.500000        NaN"
+       "        sepal_length  sepal_width  petal_length  petal_width species\n",
+       "count     150.000000   150.000000    150.000000   150.000000     150\n",
+       "unique           NaN          NaN           NaN          NaN       3\n",
+       "top              NaN          NaN           NaN          NaN  setosa\n",
+       "freq             NaN          NaN           NaN          NaN      50\n",
+       "mean        5.843333     3.054000      3.758667     1.198667     NaN\n",
+       "std         0.828066     0.433594      1.764420     0.763161     NaN\n",
+       "min         4.300000     2.000000      1.000000     0.100000     NaN\n",
+       "25%         5.100000     2.800000      1.600000     0.300000     NaN\n",
+       "50%         5.800000     3.000000      4.350000     1.300000     NaN\n",
+       "75%         6.400000     3.300000      5.100000     1.800000     NaN\n",
+       "max         7.900000     4.400000      6.900000     2.500000     NaN"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -593,7 +595,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>virginica</td>\n",
+       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -604,14 +606,14 @@
        "</div>"
       ],
       "text/plain": [
-       "          species\n",
-       "count         150\n",
-       "unique          3\n",
-       "top     virginica\n",
-       "freq           50"
+       "       species\n",
+       "count      150\n",
+       "unique       3\n",
+       "top     setosa\n",
+       "freq        50"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +691,7 @@
        "149           5.9          3.0           5.1          1.8  virginica"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +725,7 @@
        "Name: species, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +749,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +769,7 @@
        "7.9"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +853,7 @@
        "4           5.0          3.6  setosa"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +932,7 @@
        "144           6.7  virginica"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1036,7 @@
        "54           6.5          2.8           4.6          1.5  versicolor"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1072,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>level_0</th>\n",
        "      <th>index</th>\n",
        "      <th>sepal_length</th>\n",
        "      <th>sepal_width</th>\n",
@@ -1082,7 +1083,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>50</td>\n",
        "      <td>7.0</td>\n",
        "      <td>3.2</td>\n",
@@ -1092,7 +1092,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>51</td>\n",
        "      <td>6.4</td>\n",
        "      <td>3.2</td>\n",
@@ -1102,7 +1101,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>52</td>\n",
        "      <td>6.9</td>\n",
        "      <td>3.1</td>\n",
@@ -1112,7 +1110,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>53</td>\n",
        "      <td>5.5</td>\n",
        "      <td>2.3</td>\n",
@@ -1122,7 +1119,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>54</td>\n",
        "      <td>6.5</td>\n",
        "      <td>2.8</td>\n",
@@ -1135,22 +1131,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   level_0  index  sepal_length  sepal_width  petal_length  petal_width  \\\n",
-       "0        0     50           7.0          3.2           4.7          1.4   \n",
-       "1        1     51           6.4          3.2           4.5          1.5   \n",
-       "2        2     52           6.9          3.1           4.9          1.5   \n",
-       "3        3     53           5.5          2.3           4.0          1.3   \n",
-       "4        4     54           6.5          2.8           4.6          1.5   \n",
-       "\n",
-       "      species  \n",
-       "0  versicolor  \n",
-       "1  versicolor  \n",
-       "2  versicolor  \n",
-       "3  versicolor  \n",
-       "4  versicolor  "
+       "   index  sepal_length  sepal_width  petal_length  petal_width     species\n",
+       "0     50           7.0          3.2           4.7          1.4  versicolor\n",
+       "1     51           6.4          3.2           4.5          1.5  versicolor\n",
+       "2     52           6.9          3.1           4.9          1.5  versicolor\n",
+       "3     53           5.5          2.3           4.0          1.3  versicolor\n",
+       "4     54           6.5          2.8           4.6          1.5  versicolor"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1236,7 @@
        "4           6.5          2.8           4.6          1.5  versicolor"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1347,7 @@
        "4           5.0          3.6           1.4          0.2  setosa  0.194444"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,12 +1369,12 @@
    "source": [
     "## Groupby\n",
     "\n",
-    "It is also possible to aggregate rows with the same value of a categorical attribute:"
+    "It is also possible to aggregate rows with the same value of a categorical attribute using the [groupby()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.groupby.html?highlight=groupby#pandas.DataFrame.groupby) function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1445,7 @@
        "virginica          6.588        2.974         5.552        2.026"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1537,7 @@
        "virginica            7.9          3.8           6.9          2.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1619,7 @@
        "virginica             50           50            50           50"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1649,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1705,7 @@
        "2   virginica         6.588        2.974         5.552        2.026"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
